--- a/templates/index.html
+++ b/templates/index.html
@@ -13,29 +13,18 @@
   {% block content %}
   {% endblock %}
 
-  <nav class="nav flex-column bg-dark pt-3" style="bottom: 0; width: 100%;"> <!-- Utilisation de position: absolute pour positionner le pied de page -->
-    <div class="container" style="margin-left: 140px; font-size: 10px;">
-      <table class="table table-borderless table-dark table-dark-opacity-25 bg-light">
-        <thead>
-          <tr>
-            <th scope="col" style="font-size: 13px;">Service Client</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>+32(0)81 87 82 49</td>
-          </tr>
-          <tr>
-            <td>buybeer@gmail.com</td>
-          </tr>
-        </tbody>
-      </table>
+  <nav class="nav flex-column bg-secondary bg-gradient bg-opacity-25 pt-3" style="color: white; height: 150px; width: 100%;"> <!-- Utilisation de position: absolute pour positionner le pied de page -->
+    <div class="container" style=" font-size: 12px;">
+      <h5 class="mb-4 " style="color: #89837E;"> Service Client :<h5>
+      <h6 class="mb-2" style="padding-left: 30px; color: #89837E;"> 32(0)81 87 82 49</h6>
+      <h6 class="mb-3" style="padding-left: 30px; color: #89837E;"> buybeer@gmail.com</h6>
+      
     </div>  
   </nav>
 
-  <div class="bg-black pt-3" style="height: 50px; width: 100%;"> <!-- Utilisation de position: absolute pour positionner le pied de page -->
-    <div class="container text-white-50" style="margin-left: 145px;">
-      <p style="font-size: 10px;">Développé par le groupe 11 © 2024 </p>
+  <div class="bg-black bg-gradient pt-5 " style="height: 110px; width: 100%;"> <!-- Utilisation de position: absolute pour positionner le pied de page -->
+    <div class="container text-white-50" >
+      <p style="font-size: 15px;">Développé par le groupe 11 © 2024 </p>
     </div>
   </div>
 
