--- a/templates/administration.html
+++ b/templates/administration.html
@@ -1,36 +1,47 @@
 {% extends "index.html" %}
 {% block content %}
+<nav class="navbar navbar-expand-lg z-3 bg-white" style="height: 200px; border-color: #BA4A00; margin-bottom: 20px;">
+    <div class="container-fluid  bg-white" style="border-bottom: solid; padding-bottom: 10px; padding-right: 80px; padding-left: 30px; border-color: #BA4A00;">
+        <a href="/liste" class="navbar-brand" style="margin-right: 20px; color: #BA4A00; font-size: 75px; text-decoration: none; font-family: 'Brush Script MT', cursive;">BuyBeer</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse fs-4 bg-white" style="margin-left: 75px;" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item ms-4">
+                    <a class="nav-link active" href="/liste">Accueil</a>
+                </li>
+                <li class="nav-item ms-4">
+                    <a class="nav-link link-body-emphasis" href="/profile">Profil</a>
+                </li> 
+                <li class="nav-item ms-4">
+                    <a class="nav-link link-body-emphasis" href="/administration">Admin</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">           
+                <li class="nav-item dropdown bg-white">
+                    <a class="nav-link dropdown-toggle" style="color: #BA4A00;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Bonjour administrateur
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="/panier">Panier</a></li>
+                        <li><a class="dropdown-item" href="/order">Historique de commande</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <form action="/logout" method="post" class="dropdown-item">
+                                <button class="btn btn-outline-dark" type="submit">Se déconnecter</button>
+                            </form>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<div style="position: absolute; top: 10px; right: 10px;">
-    <!-- Positioning for any additional content -->
-</div>
-
-<ul class="nav nav-tabs justify-content-center" style=" padding-right: 2%; padding-left: 7%;">
-    <!-- Navigation tabs -->
-    <li class="nav-item" style="margin-left: auto;">
-        <a class="nav-link link-body-emphasis" href="/liste">Accueil</a>
-        <!-- Link to home page -->
-    </li>
-    <li class="nav-item">
-        <a class="nav-link link-body-emphasis" href="/profile">Profil</a>
-        <!-- Link to profile page -->
-    </li>
-    <li class="nav-item">
-        <a class="nav-link active" href="/administration">Admin</a>
-        <!-- Link to admin page, currently active -->
-    </li>
-    <li class="nav-item" style="margin-left: auto;">
-        <form action="/logout" method="post">
-            <button class="btn btn-danger" type="submit">Se déconnecter</button>
-            <!-- Logout button -->
-        </form>
-    </li>
-</ul>
-<br>
-
-<div class="container">
+<div class="container" style="height: 600px;">
     <!-- Container for user administration content -->
-    <h1 class="display-6 text-center">Administration</h1>
+    <h1 class="display-6 text-center" >Administration</h1>
     <!-- Heading for the administration section -->
 
     <table class="table table-hover">
