--- a/templates/beers.html
+++ b/templates/beers.html
@@ -43,11 +43,13 @@
 </nav>
 
 <div class="container " style="padding-left: 100px;">
+    {% if current_user.group == "admin" %}
     <form action="/save" method="get" class="mb-5 text-center" style="padding-left: 50px;">
         <button class="btn btn-outline-success" type="submit" style=" width: 300px;">
             Ajouter une bière
         </button>
     </form>
+    {%endif%}
     {% for beer in beers %}         
 <div class="col col-sm-12 col-md-12 mb-2 mb-sm-0" style="padding-left: 50px; max-width: 100%;">
     <!-- Column for alcohol item -->
