--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "index.html"%}
 {% block content %}
 <div class='grid text-center mb-5' style="border-bottom: solid; color :#BA4A00;font-size: 125px; text-decoration: none; font-family: 'Brush Script MT', cursive;">
-    BuyBeer
+    BuyBeer - login
 </div>
 <div class="container">
     <div class="row justify-content-center">
