--- a/templates/new_mdp.html
+++ b/templates/new_mdp.html
@@ -1,79 +1,31 @@
 {%extends "index.html"%}
 {% block content %}
-<nav class="navbar navbar-expand-lg z-3 bg-white" style="height: 200px; border-color: #BA4A00; margin-bottom: 20px;">
-    <div class="container-fluid  bg-white" style="border-bottom: solid; padding-bottom: 10px; padding-right: 80px; padding-left: 30px; border-color: #BA4A00;">
-        <a href="/liste" class="navbar-brand" style="margin-right: 20px; color: #BA4A00; font-size: 75px; text-decoration: none; font-family: 'Brush Script MT', cursive;">BuyBeer</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse fs-4 bg-white" style="margin-left: 75px;" id="navbarNav">
-            <ul class="navbar-nav">
-                {% if current_user != None %}
-                    <li class="nav-item ms-4">
-                        <a class="nav-link active" href="/liste">Accueil</a>
-                    </li>
-                    <li class="nav-item ms-4">
-                        <a class="nav-link link-body-emphasis" href="/profile">Profil</a>
-                    </li>
-                    {% if current_user.group == "admin" %}
-                        <li class="nav-item ms-4">
-                            <a class="nav-link link-body-emphasis" href="/administration">Admin</a>
-                        </li>
-                    {% endif %}
-                {% endif %}
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                {% if current_user != None %}
-                    <li class="nav-item dropdown bg-white">
-                        <a class="nav-link dropdown-toggle" style="color: #BA4A00;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <b>[{{nb}}] </b> Bonjour Mr/Mlle {{current_user.name}}
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="/panier">Panier [{{nb}}]</a></li>
-                            <li><a class="dropdown-item" href="/order">Historique de commande</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li>
-                                <form action="/logout" method="post" class="dropdown-item">
-                                    <button class="btn btn-outline-dark" type="submit">Se déconnecter</button>
-                                </form>
-                            </li>
-                        </ul>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a href="/login"><button class="btn btn-danger" type="button">Quitter l'application</button></a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-</nav>
-    </div>
-</nav>
+<div class='grid text-center mb-5' style="border-bottom: solid; color :#BA4A00;font-size: 125px; text-decoration: none; font-family: 'Brush Script MT', cursive;">
+    BuyBeer - mot de passe 
+</div>
 
-<div class="container border rounded-4 border-2 p-4 mb-4 border-opacity-75" style=" width: 50%">
-    <h2 class="display-6 text-center">Changement de mot de passe</h2><br>
-    <form action="/new_mdp" method="post">
+<div class="container mb-5" style="width: 50%">
+    <form action="/new_mdp" method="post" class="grid text-center p-4 mb-4 border-opacity-75">
         {%if current_user == None%}
-        <div class="input-group mb-3">
-            <label for="email" class="input-group-text">Email</label>
+        <div class="mb-4">
+            <label for="email" class="form-label">Email</label>
             <input type="email" id="email" class="form-control" name="email" required={{required}}/>
         </div>
         {%endif%}
-        <div class="input-group mb-3">
-            <label for="old_pwd" class="input-group-text">Ancien mot de passe</label>
+        <div class="mb-4">
+            <label for="old_pwd" class="form-label">Ancien mot de passe</label>
             <input type="password" id="old_pwd" class="form-control" name="old_pwd" required="true"/>
         </div>
-        <div class="input-group mb-3">
-            <label for="new_pwd" class="input-group-text">Nouveau mot de passe</label>
+        <div class="mb-4">
+            <label for="new_pwd" class="form-label">Nouveau mot de passe</label>
             <input type="password" id="new_pwd" class="form-control" name="new_pwd" required="true"/>
         </div>
-        <div class="input-group mb-3">
-            <label for="new_pwd_confirm" class="input-group-text">Confirmer le mot de passe</label>
+        <div class="mb-4">
+            <label for="new_pwd_confirm" class="form-label">Confirmer le mot de passe</label>
             <input type="password" id="new_pwd_confirm" class="form-control" name="new_pwd_confirm" required="true"/>
         </div>
         <div class="grid text-center">
-            <a href="/liste"><button type="button" class="btn btn-outline-dark">Annuler</button></a>
+            <a href="/login"><button type="button" class="btn btn-outline-dark">Annuler</button></a>
             <button type="submit" class="btn btn-outline-dark">Confirmer</button>
         </div>
     </form>
